<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.karakun</groupId>
    <artifactId>encrypted-filechannel</artifactId>
    <version>2.1.0-SNAPSHOT</version>
    <packaging>jar</packaging>
    <name>Encrypted FileChannel</name>
    <url>https://github.com/karakun/encrypted-filechannel</url>
    <description>Encrypted FileChannel</description>

    <licenses>
        <license>
            <name>MPL 2.0</name>
            <url>https://www.mozilla.org/en-US/MPL/2.0/</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <scm>
        <connection>scm:git:https://github.com/karakun/encrypted-filechannel</connection>
        <url>https://github.com/karakun/encrypted-filechannel</url>
    </scm>

    <developers>
        <developer>
            <id>jporzelt</id>
            <name>Johannes Porzelt</name>
            <email>jporzelt@users.noreply.github.com</email>
        </developer>
        <developer>
            <id>karakun</id>
            <name>Karakun AG</name>
            <email>info@karakun.com</email>
        </developer>
    </developers>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.3.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>com.google.crypto.tink</groupId>
            <artifactId>tink</artifactId>
            <version>1.19.0</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.14.0</version>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <distributionManagement>
        <snapshotRepository>
            <id>maven-snapshots</id>
            <name>Karakun nexus snapshots</name>
            <url>https://nexus.karakun.com/repository/maven-snapshots/</url>
        </snapshotRepository>
        <repository>
            <id>maven-public-releases</id>
            <name>Karakun nexus releases</name>
            <url>https://nexus.karakun.com/repository/maven-public-releases/</url>
        </repository>
    </distributionManagement>
</project>
